# PACS-P3

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PilgorCMakeLists.txt  cmake_install.cmake  compile.sh
CMake/: PilgorCMakeLists.txt
src/: pi_taylor_parallel.cc  pi_taylor_parallel_kahan.cc  pi_taylor_sequential.cc
